; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_channelmap.c_get_channel.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_channelmap.c_get_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32*, i8)* @get_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_channel(i8** %0, i32* %1, i8 signext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i8*, align 8
  store i8** %0, i8*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8 %2, i8* %7, align 1
  %9 = load i8**, i8*** %5, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = load i8, i8* %7, align 1
  %12 = call i8* @split(i8* %10, i8 signext %11)
  store i8* %12, i8** %8, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %22, label %15

15:                                               ; preds = %3
  %16 = load i8, i8* %7, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp eq i32 %17, 45
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32, i32* @EINVAL, align 4
  %21 = call i32 @AVERROR(i32 %20)
  store i32 %21, i32* %4, align 4
  br label %37

22:                                               ; preds = %15, %3
  %23 = load i8**, i8*** %5, align 8
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 @av_get_channel_layout(i8* %24)
  %26 = load i32*, i32** %6, align 8
  store i32 %25, i32* %26, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @av_get_channel_layout_nb_channels(i32 %28)
  %30 = icmp ne i32 %29, 1
  br i1 %30, label %31, label %34

31:                                               ; preds = %22
  %32 = load i32, i32* @EINVAL, align 4
  %33 = call i32 @AVERROR(i32 %32)
  store i32 %33, i32* %4, align 4
  br label %37

34:                                               ; preds = %22
  %35 = load i8*, i8** %8, align 8
  %36 = load i8**, i8*** %5, align 8
  store i8* %35, i8** %36, align 8
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %34, %31, %19
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i8* @split(i8*, i8 signext) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @av_get_channel_layout(i8*) #1

declare dso_local i32 @av_get_channel_layout_nb_channels(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
